feat [server,desktop] : Add Data seeder for interest rules ,  modify UI for Creation page (Accounts)
